# zero

./: .gitattributes  .gitignore  AGENTS.md  AP_subdog.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  package.json  refactor.md  test_config.json  test_direct.json
crates/api/: Cargo.toml  README.md
crates/api/src/: auth.rs  capabilities.rs  command.rs  error.rs  event.rs  flow.rs  lib.rs  query.rs  response.rs  sink.rs  snapshot.rs  traits.rs  webhook.rs
crates/api/tests/: api_model.rs  event_sink.rs  forward_compat.rs  query_request.rs  response.rs  webhook_sink.rs
crates/config/: Cargo.toml
crates/config/src/: auth.rs  compile.rs  error.rs  lib.rs  model.rs  rule_sets.rs  validate.rs
crates/config/src/model/: api.rs  dns.rs  inbound.rs  log.rs  mod.rs  outbound.rs  route.rs  transport.rs
crates/config/tests/: auth.rs  config_parse.rs
crates/connector/: Cargo.toml
crates/connector/src/: dispatcher.rs  error.rs  lib.rs  panel.rs  registry.rs
crates/connector/tests/: event_dispatcher.rs  webhook_dispatcher.rs
crates/dns/: Cargo.toml
crates/dns/src/: backends.rs  cache.rs  fake_ip.rs  lib.rs  router.rs  system.rs  udp.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  completed_sessions.rs  error.rs  event_log.rs  export.rs  flow_observation.rs  handle.rs  hook.rs  inventory.rs  lib.rs  outbound_health.rs  passive_relay_health.rs  plan.rs  probe_trigger.rs  resolve.rs  runtime.rs  session_lifecycle.rs  session_registry.rs  stats.rs  view.rs
crates/engine/tests/: event_subscription.rs  export.rs  http_connect.rs  logging.rs  mixed.rs  passive_relay_health.rs  plan.rs  router.rs  session_observability.rs  shutdown.rs  socks5.rs  socks5_udp.rs  socks5_udp_idle.rs  socks5_udp_reuse.rs  stats.rs  vless.rs
crates/ffi/: Cargo.toml  README.md
crates/ffi/include/: zero.h
crates/ffi/src/: lib.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/platform/tokio/: Cargo.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: adapters.rs  inventory.rs  lib.rs  logging.rs  process_lookup.rs  protocol_adapter.rs  protocol_capability.rs  protocol_catalog.rs  protocol_registry.rs  register.rs  runtime.rs
crates/proxy/tests/: direct.rs  export.rs  http.rs  http_connect.rs  inventory.rs  logging.rs  mieru_xray_interop.rs  mixed.rs  port_conflict.rs  probe_outbound.rs  runtime_boundary.rs  session_observability.rs  shadowsocks_xray_interop.rs  shutdown.rs  socks5.rs  socks5_udp.rs  socks5_udp_idle.rs  socks5_udp_reuse.rs  stats.rs  trojan.rs  trojan_xray_interop.rs  vless.rs  vmess.rs  vmess_xray_interop.rs
crates/rule/: Cargo.toml
crates/rule/benches/: domain_index.rs  zrs_pipeline.rs
crates/rule/src/: compile.rs  error.rs  lib.rs  model.rs  normalize.rs  protocol.rs  query.rs
crates/rule/tests/: compiler.rs  protocol.rs  query.rs  zrs.rs
crates/stack/: Cargo.toml
crates/stack/src/: lib.rs  packet.rs  system.rs  system_proxy.rs  tcp.rs  udp.rs
crates/stack/tests/: mtu.rs  packet.rs
crates/transport/: Cargo.toml
crates/transport/src/: client_hello.rs  fingerprint.rs  grpc.rs  h2.rs  http_upgrade.rs  hysteria2_quic.rs  inbound_quic.rs  inbound_route.rs  inbound_stack.rs  lib.rs  managed_udp.rs  metered.rs  mieru_transport.rs  mux_stack.rs  outbound_leaf.rs  outbound_stack.rs  profile.rs  protocol_inbound_route.rs  quic.rs  shadowsocks_transport.rs  socks5_transport.rs  split_http.rs  stream.rs  tls.rs  transport_plan.rs  trojan_transport.rs  udp_packet_path.rs  vless_transport.rs  vmess_transport.rs  ws.rs
crates/transport/tests/: xhttp_stream_one.rs
crates/tun/: Cargo.toml  build.rs
crates/tun/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/tun/tests/: prefix_mask.rs
crates/ztls/: Cargo.toml
crates/ztls/src/: aead.rs  handshake.rs  keys.rs  lib.rs  messages.rs  reader_writer.rs  record.rs  stream.rs  util.rs
protocols/http-connect/: Cargo.toml  README.md
protocols/http-connect/src/: inbound.rs  lib.rs  metadata.rs
protocols/http-connect/tests/: inbound.rs
protocols/hysteria2/: Cargo.toml  README.md  TODO.md
protocols/hysteria2/src/: inbound.rs  lib.rs  metadata.rs  outbound.rs  shared.rs  transport.rs  udp.rs
protocols/hysteria2/tests/: shared.rs  udp.rs
protocols/mieru/: Cargo.toml  README.md
protocols/mieru/src/: crypto.rs  inbound.rs  lib.rs  metadata.rs  outbound.rs  protocol.rs  segment.rs  session.rs  transport.rs  tunnel.rs  udp.rs
protocols/mieru/tests/: loopback.rs  outbound.rs  pbkdf2_verify.rs  udp.rs
protocols/shadowsocks/: Cargo.toml  README.md
protocols/shadowsocks/examples/: udp_server_probe.rs
protocols/shadowsocks/src/: inbound.rs  lib.rs  metadata.rs  outbound.rs  shared.rs  stream.rs  transport.rs  udp.rs  validation.rs
protocols/shadowsocks/tests/: outbound.rs  shared.rs
protocols/socks5/: Cargo.toml  README.md
protocols/socks5/src/: inbound.rs  lib.rs  metadata.rs  outbound.rs  shared.rs  transport.rs  udp.rs  validation.rs
protocols/socks5/tests/: handshake.rs
protocols/trojan/: Cargo.toml  README.md
protocols/trojan/src/: inbound.rs  lib.rs  metadata.rs  outbound.rs  shared.rs  transport.rs  udp.rs
protocols/trojan/tests/: outbound.rs
protocols/vless/: Cargo.toml  README.md  TODO.md
protocols/vless/src/: deferred_response.rs  flow.rs  inbound.rs  lib.rs  metadata.rs  mux.rs  mux_crypto.rs  mux_pool.rs  outbound.rs  shared.rs  transport.rs  udp.rs  uuid.rs  validation.rs
protocols/vless/tests/: common_tests.rs  deferred_response.rs  fallback_replay.rs  flow.rs  handshake.rs  mux.rs  mux_crypto.rs  reality_aead_tests.rs  reality_auth_tests.rs  reality_reader_writer_tests.rs  reality_records_tests.rs  reality_tls13_keys_tests.rs  reality_tls13_messages_tests.rs  reality_util_tests.rs  slide_buffer_tests.rs
protocols/vmess/: Cargo.toml  README.md
protocols/vmess/src/: crypto.rs  inbound.rs  lib.rs  metadata.rs  mux.rs  outbound.rs  shared.rs  stream.rs  transport.rs  udp.rs  validation.rs
protocols/vmess/tests/: tcp_stream.rs
(+1374 files in other folders)
