[package]
name = "zero"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["full", "status-api"]
full = [
    "inbound-socks5",
    "inbound-http-connect",
    "inbound-mixed",
    "inbound-vless",
    "inbound-hysteria2",
    "outbound-socks5",
    "outbound-vless",
    "outbound-hysteria2",
    "inbound-shadowsocks",
    "outbound-shadowsocks",
]
inbound-socks5 = ["zero-proxy/inbound-socks5"]
inbound-http-connect = ["zero-proxy/inbound-http-connect"]
inbound-mixed = ["zero-proxy/inbound-mixed"]
inbound-vless = ["zero-proxy/inbound-vless"]
inbound-hysteria2 = ["zero-proxy/inbound-hysteria2"]
inbound-shadowsocks = ["zero-proxy/inbound-shadowsocks"]
outbound-socks5 = ["zero-proxy/outbound-socks5"]
outbound-vless = ["zero-proxy/outbound-vless"]
outbound-hysteria2 = ["zero-proxy/outbound-hysteria2"]
outbound-shadowsocks = ["zero-proxy/outbound-shadowsocks"]
status-api = []
event-dispatcher = ["dep:zero-connector", "zero-connector/event-dispatcher"]
sink-jsonl = ["event-dispatcher", "zero-connector/sink-jsonl"]
panel-connector = ["status-api", "event-dispatcher", "zero-connector/panel-connector"]

[workspace]
members = [
    "crates/traits",
    "crates/core",
    "crates/api",
    "crates/config",
    "crates/connector",
    "crates/logging",
    "crates/proxy",
    "crates/router",
    "crates/platform/tokio",
    "crates/transport",
    "protocols/socks5",
    "protocols/http-connect",
    "protocols/vless",
    "protocols/hysteria2",
    "protocols/shadowsocks",
    "crates/engine",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Zero Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zerodenet/zero"
homepage = "https://zerodenet.org"

[workspace.dependencies]
ipnet = { version = "2.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zero-api = { path = "crates/api" }
zero-config = { path = "crates/config" }
zero-engine = { path = "crates/engine", default-features = false }
zero-logging = { path = "crates/logging" }
zero-proxy = { path = "crates/proxy", default-features = false }
zero-connector = { path = "crates/connector", optional = true, default-features = false }
