[package]
name = "zero"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["full", "status_api"]
full = [
    "socks5",
    "http_connect",
    "mixed",
    "vless",
    "hysteria2",
    "shadowsocks",
    "trojan",
    "vmess",
    "mieru",
    "dns",
]
dns = ["zero-proxy/dns"]
socks5 = ["zero-proxy/socks5"]
http_connect = ["zero-proxy/http_connect"]
mixed = ["zero-proxy/mixed"]
vless = ["zero-proxy/vless"]
hysteria2 = ["zero-proxy/hysteria2"]
shadowsocks = ["zero-proxy/shadowsocks"]
trojan = ["zero-proxy/trojan"]
vmess = ["zero-proxy/vmess"]
mieru = ["zero-proxy/mieru"]
status_api = []
event_dispatcher = ["dep:zero-connector", "zero-connector/event_dispatcher"]
sink_jsonl = ["event_dispatcher", "zero-connector/sink_jsonl"]
panel_connector = ["status_api", "event_dispatcher", "zero-connector/panel_connector"]
grpc_api = ["dep:zero-grpc"]

[workspace]
members = [
    "crates/traits",
    "crates/core",
    "crates/api",
    "crates/config",
    "crates/connector",
    "crates/logging",
    "crates/proxy",
    "crates/router",
    "crates/platform/tokio",
    "crates/ztls",
    "crates/transport",
    "protocols/socks5",
    "protocols/http-connect",
    "protocols/vless",
    "protocols/hysteria2",
    "protocols/shadowsocks",
    "protocols/trojan",
    "protocols/vmess",
    "protocols/mieru",
    "crates/dns",
    "crates/engine",
    "crates/ffi",
    "crates/grpc",
    "crates/tun",
    "crates/stack",
]
resolver = "2"

[workspace.package]
version = "0.0.12"
edition = "2021"
authors = ["zerodenet <https://zerodenet.org>"]
license = "MPL-2.0"
repository = "https://github.com/zerodenet/zero"
homepage = "https://zerodenet.org"

[workspace.dependencies]
ipnet = { version = "2.11", features = ["serde"] }
maxminddb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }
zero-api = { path = "crates/api" }
zero-config = { path = "crates/config" }
zero-engine = { path = "crates/engine", default-features = false }
zero-logging = { path = "crates/logging" }
zero-proxy = { path = "crates/proxy", default-features = false }
zero-connector = { path = "crates/connector", optional = true, default-features = false }
zero-grpc = { path = "crates/grpc", optional = true }
