[package]
name = "zero-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22"
ipnet.workspace = true
maxminddb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zero-api = { path = "../api" }
zero-router = { path = "../router" }
zero-traits = { path = "../traits" }
