[package]
name = "zero-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ipnet.workspace = true
maxminddb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zero-api = { path = "../api" }
zero-router = { path = "../router" }
zero-traits = { path = "../traits" }
shadowsocks = { path = "../../protocols/shadowsocks", features = ["blake3"] }
socks5 = { path = "../../protocols/socks5" }
vless = { path = "../../protocols/vless", default-features = false, features = ["validation"] }
vmess = { path = "../../protocols/vmess" }
