[package]
name = "zero-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
event-dispatcher = []
sink-jsonl = ["event-dispatcher"]
webhook = ["event-dispatcher", "zero-api/webhook"]
panel-connector = ["webhook", "dep:reqwest"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zero-api = { path = "../api" }
zero-config = { path = "../config" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
