[package]
name = "zero-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
udp = []
doh = []
dot = []

[dependencies]
ipnet.workspace = true
tokio.workspace = true
tracing.workspace = true
zero-config = { path = "../config" }
zero-platform-tokio = { path = "../platform/tokio" }
zero-traits = { path = "../traits" }
