[package]
name = "zero-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-protocol-http-connect = { path = "../../protocols/http-connect" }
zero-protocol-socks5 = { path = "../../protocols/socks5" }
zero-router = { path = "../router" }
zero-platform-tokio = { path = "../platform/tokio" }
zero-traits = { path = "../traits" }

[dev-dependencies]
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio.workspace = true
