[package]
name = "zero-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
rand = "0.9"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zero-api = { path = "../api" }
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-engine-contract = { path = "../engine-contract" }
zero-router = { path = "../router" }

[dev-dependencies]
tracing-subscriber.workspace = true
rcgen = "0.14"
serde_json.workspace = true
tokio.workspace = true
