[package]
name = "zero-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zero-api = { path = "../api" }
zero-config = { path = "../config" }
zero-engine = { path = "../engine" }
