[package]
name = "zero-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
futures-core = "0.3"
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tokio = { workspace = true, features = ["sync", "rt", "net"] }
tokio-stream = "0.1"
tracing.workspace = true
serde_json.workspace = true
zero-api = { path = "../api" }
zero-engine = { path = "../engine" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tonic = { version = "0.12", features = ["transport", "channel"] }
