[package]
name = "zero-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = [
    "inbound-socks5",
    "inbound-http-connect",
    "inbound-mixed",
    "inbound-vless",
    "outbound-socks5",
    "outbound-vless",
]
inbound-socks5 = ["dep:zero-protocol-socks5"]
inbound-http-connect = ["dep:zero-protocol-http-connect"]
inbound-mixed = ["inbound-socks5", "inbound-http-connect"]
inbound-vless = [
    "zero-platform-tokio/vless-reality",
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "zero-transport/h2",
    "zero-transport/http-upgrade",
    "zero-transport/split-http",
    "zero-transport/quic",
    "dep:zero-protocol-vless",
    "zero-protocol-vless/reality",
]
outbound-socks5 = ["dep:zero-protocol-socks5"]
outbound-vless = [
    "zero-platform-tokio/vless-reality",
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "zero-transport/h2",
    "zero-transport/http-upgrade",
    "zero-transport/split-http",
    "zero-transport/quic",
    "dep:zero-protocol-vless",
    "zero-protocol-vless/reality",
]
inbound-hysteria2 = [
    "dep:quinn",
    "dep:ring",
    "dep:rustls",
    "zero-transport/quic",
    "dep:zero-protocol-hysteria2",
    "zero-protocol-hysteria2/crypto",
]
outbound-hysteria2 = [
    "dep:quinn",
    "dep:ring",
    "dep:rustls",
    "zero-transport/quic",
    "dep:zero-protocol-hysteria2",
    "zero-protocol-hysteria2/crypto",
]
inbound-shadowsocks = [
    "dep:ring",
    "dep:zero-protocol-shadowsocks",
    "zero-protocol-shadowsocks/crypto",
    "zero-protocol-shadowsocks/blake3",
]
outbound-shadowsocks = [
    "dep:ring",
    "dep:zero-protocol-shadowsocks",
    "zero-protocol-shadowsocks/crypto",
    "zero-protocol-shadowsocks/blake3",
]
inbound-trojan = [
    "zero-transport/tls",
    "dep:ring",
    "dep:zero-protocol-trojan",
    "zero-protocol-trojan/crypto",
    "dep:tokio-rustls"
]
outbound-trojan = [
    "zero-transport/tls",
    "dep:ring",
    "dep:zero-protocol-trojan",
    "zero-protocol-trojan/crypto",
    "dep:tokio-rustls"
]
inbound-vmess = [
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "dep:ring",
    "dep:zero-protocol-vmess",
    "dep:tokio-rustls"
]
outbound-vmess = [
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "dep:ring",
    "dep:zero-protocol-vmess",
    "dep:tokio-rustls"
]
dns-udp = ["zero-dns/udp"]

[dependencies]
async-trait = "0.1"
regex = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tokio.workspace = true
tracing.workspace = true
tokio-rustls = { version = "0.26", optional = true }
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-dns = { path = "../dns" }
zero-engine = { path = "../engine" }
zero-platform-tokio = { path = "../platform/tokio" }
zero-protocol-http-connect = { path = "../../protocols/http-connect", optional = true }
zero-protocol-socks5 = { path = "../../protocols/socks5", optional = true }
zero-protocol-vless = { path = "../../protocols/vless", optional = true, default-features = false }
zero-protocol-hysteria2 = { path = "../../protocols/hysteria2", optional = true, default-features = false }
zero-protocol-shadowsocks = { path = "../../protocols/shadowsocks", optional = true, default-features = false }
zero-protocol-trojan = { path = "../../protocols/trojan", optional = true, default-features = false }
zero-protocol-vmess = { path = "../../protocols/vmess", optional = true }
zero-traits = { path = "../traits" }
zero-tun = { path = "../tun" }
zero-stack = { path = "../stack" }
zero-transport = { path = "../transport", optional = true, features = ["vless"] }

[dev-dependencies]
futures-util = "0.3"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json.workspace = true
tokio-tungstenite = "0.23"
tracing-subscriber.workspace = true
zero-api = { path = "../api" }
