[package]
name = "zero-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = [
    "socks5",
    "http_connect",
    "mixed",
    "vless",
]
socks5 = ["dep:socks5"]
http_connect = ["dep:http_connect"]
mixed = ["socks5", "http_connect"]
vless = [
    "zero-platform-tokio/vless-reality",
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "zero-transport/h2",
    "zero-transport/http_upgrade",
    "zero-transport/split_http",
    "zero-transport/quic",
    "dep:vless",
    "vless/reality",
]
hysteria2 = [
    "quic_packet_path",
    "dep:ring",
    "dep:rustls",
    "zero-transport/quic",
    "dep:hysteria2",
    "hysteria2/crypto",
    "hysteria2/runtime",
]
quic_packet_path = ["dep:quinn"]
shadowsocks = [
    "dep:ring",
    "zero-transport/shadowsocks",
    "dep:shadowsocks",
    "shadowsocks/crypto",
    "shadowsocks/blake3",
]
trojan = [
    "zero-transport/trojan",
    "dep:ring",
    "dep:trojan",
    "trojan/crypto",
    "dep:tokio-rustls",
]
vmess = [
    "zero-transport/tls",
    "zero-transport/ws",
    "zero-transport/grpc",
    "dep:ring",
    "dep:vmess",
    "dep:tokio-rustls",
]
mieru = [
    "zero-transport/mieru",
    "dep:mieru",
    "mieru/crypto",
]
dns = ["zero-dns/udp"]

[dependencies]
async-trait = "0.1"
regex = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tokio-rustls = { version = "0.26", optional = true }
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-dns = { path = "../dns" }
zero-engine = { path = "../engine" }
zero-platform-tokio = { path = "../platform/tokio" }
http_connect = { path = "../../protocols/http-connect", optional = true }
socks5 = { path = "../../protocols/socks5", optional = true }
vless = { path = "../../protocols/vless", optional = true, default-features = false }
hysteria2 = { path = "../../protocols/hysteria2", optional = true, default-features = false }
shadowsocks = { path = "../../protocols/shadowsocks", optional = true, default-features = false }
trojan = { path = "../../protocols/trojan", optional = true, default-features = false }
vmess = { path = "../../protocols/vmess", optional = true }
mieru = { path = "../../protocols/mieru", optional = true, default-features = false }
zero-api = { path = "../api" }
serde_json.workspace = true
zero-traits = { path = "../traits" }
zero-tun = { path = "../tun" }
zero-stack = { path = "../stack" }
zero-transport = { path = "../transport", optional = true, features = ["vless"] }

[dev-dependencies]
futures-util = "0.3"
rcgen = "0.14"
rustls = { workspace = true }
serde_json.workspace = true
tokio-rustls = { version = "0.26" }
tokio-tungstenite = "0.23"
tracing-subscriber.workspace = true
