[package]
name = "zero-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = [
    "socks5",
    "http",
    "mixed",
    "vless",
]
udp-runtime = []
udp-response-runtime = ["udp-runtime"]
managed-udp-runtime = ["udp-runtime"]
managed-datagram-runtime = ["managed-udp-runtime"]
managed-stream-runtime = ["managed-udp-runtime", "udp-response-runtime"]
upstream-association-runtime = ["udp-runtime"]
tcp-tunnel-runtime = []
tcp-session-runtime = []
tcp-transport-session-runtime = []
socks5 = ["udp-response-runtime", "upstream-association-runtime", "tcp-tunnel-runtime", "dep:socks5", "socks5/runtime"]
http = ["dep:http"]
mixed = ["socks5", "http"]
transport_quic = ["zero-transport/quic"]
authenticated-quic-inbound-runtime = [
    "managed-datagram-runtime",
    "quic_packet_path",
    "transport_quic",
]
vless = [
    "managed-stream-runtime",
    "tcp-tunnel-runtime",
    "transport_quic",
    "dep:vless",
    "vless/reality",
]
hysteria2 = [
    "authenticated-quic-inbound-runtime",
    "tcp-transport-session-runtime",
    "dep:hysteria2",
    "hysteria2/runtime",
]
quic_packet_path = ["dep:quinn"]
shadowsocks = [
    "managed-datagram-runtime",
    "tcp-session-runtime",
    "dep:shadowsocks",
    "shadowsocks/runtime",
    "shadowsocks/blake3",
]
trojan = [
    "managed-stream-runtime",
    "tcp-tunnel-runtime",
    "zero-transport/tls",
    "dep:ring",
    "dep:trojan",
    "trojan/runtime",
    "dep:tokio-rustls",
]
vmess = [
    "managed-stream-runtime",
    "tcp-session-runtime",
    "dep:vmess",
    "vmess/runtime",
]
mieru = [
    "managed-stream-runtime",
    "tcp-session-runtime",
    "dep:mieru",
    "mieru/runtime",
]
dns = ["zero-dns/udp"]

[dependencies]
async-trait = "0.1"
regex = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tokio-rustls = { version = "0.26", optional = true }
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-dns = { path = "../dns" }
zero-engine = { path = "../engine" }
zero-platform-tokio = { path = "../platform/tokio" }
http = { path = "../../protocols/http", optional = true }
socks5 = { path = "../../protocols/socks5", optional = true }
vless = { path = "../../protocols/vless", optional = true, default-features = false }
hysteria2 = { path = "../../protocols/hysteria2", optional = true, default-features = false }
shadowsocks = { path = "../../protocols/shadowsocks", optional = true, default-features = false }
trojan = { path = "../../protocols/trojan", optional = true, default-features = false }
vmess = { path = "../../protocols/vmess", optional = true, default-features = false }
mieru = { path = "../../protocols/mieru", optional = true, default-features = false }
zero-api = { path = "../api" }
serde_json.workspace = true
zero-traits = { path = "../traits" }
zero-tun = { path = "../tun" }
zero-stack = { path = "../stack" }
zero-transport = { path = "../transport" }

[dev-dependencies]
futures-util = "0.3"
rcgen = "0.14"
rustls = { workspace = true }
serde_json.workspace = true
tokio-rustls = { version = "0.26" }
tokio-tungstenite = "0.23"
tracing-subscriber.workspace = true
