[package]
name = "zero-stack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
zero-traits = { path = "../traits" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Networking_WinHttp",
    "Win32_Foundation",
] }
