[package]
name = "zero-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
grpc = []
h2 = []
http-upgrade = []
split-http = []
quic = []
tls = []
ws = []
hysteria2 = []
vless = ["grpc", "h2", "http-upgrade", "split-http", "quic", "tls", "ws"]

[dependencies]
bytes = "1"
futures-util = "0.3"
h2 = "0.4"
http = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"] }
rand = "0.9"
ring = "0.17"
rustls = { workspace = true }
rustls-pemfile = "2"
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false }
tokio-tungstenite = "0.23"
tracing = { workspace = true }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
tungstenite = "0.23"
webpki-roots = "1"
zero-config = { path = "../config" }
zero-core = { path = "../core" }
zero-engine = { path = "../engine" }
zero-platform-tokio = { path = "../platform/tokio" }
zero-protocol-hysteria2 = { path = "../../protocols/hysteria2", features = ["crypto"] }
zero-protocol-vless = { path = "../../protocols/vless", default-features = false, features = ["reality"] }
zero-traits = { path = "../traits" }
