[package]
name = "http-connect"
version = "0.0.1"  # RFC 7231, no upstream reference
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
