[package]
name = "zero-protocol-hysteria2"
# hysteria v2.6.1
version = "2.6.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = ["dep:ring", "dep:subtle"]

[dependencies]
ring = { version = "0.17", optional = true }
subtle = { version = "2.6", optional = true }
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
ring = { version = "0.17" }
