[package]
name = "hysteria2"
# hysteria v2.6.1
version = "2.6.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = ["dep:ring", "dep:subtle"]
runtime = [
    "crypto",
    "tokio",
    "dep:rustls",
    "dep:tracing",
    "dep:zero-transport",
]
tokio = ["dep:quinn", "dep:tokio"]

[dependencies]
async-trait = "0.1"
ring = { version = "0.17", optional = true }
subtle = { version = "2.6", optional = true }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"], optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-transport = { path = "../../crates/transport", optional = true, features = ["quic"] }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
ring = { version = "0.17" }
