[package]
name = "mieru"
version = "3.33.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = ["dep:chacha20poly1305", "dep:sha2", "dep:ring", "dep:rand", "dep:tokio"]

[dependencies]
chacha20poly1305 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
ring = { version = "0.17", optional = true }
rand = { version = "0.8", optional = true }
tokio = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
chacha20poly1305 = "0.10"
sha2 = "0.10"
ring = "0.17"
rand = "0.8"
