[package]
name = "shadowsocks"
version = "1.21.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = ["dep:md-5", "dep:ring", "dep:tokio"]
blake3 = ["dep:blake3"]

[dependencies]
blake3 = { version = "1", optional = true }
md-5 = { version = "0.10", optional = true, default-features = false }
ring = { version = "0.17", optional = true }
tokio = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
ring = { version = "0.17" }
