[package]
name = "shadowsocks"
version = "1.21.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = ["dep:aes", "dep:chacha20poly1305", "dep:md-5", "dep:ring", "dep:tokio"]
blake3 = ["dep:base64", "dep:blake3"]

[dependencies]
aes = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
blake3 = { version = "1", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true, default-features = false }
ring = { version = "0.17", optional = true }
tokio = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
ring = { version = "0.17" }
chacha20poly1305 = "0.10"
aes = "0.8"
