[package]
name = "shadowsocks"
version = "1.21.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
crypto = [
    "validation",
    "dep:aes",
    "dep:chacha20poly1305",
    "dep:md-5",
    "dep:ring",
    "dep:tokio",
]
validation = []
blake3 = ["dep:base64", "dep:blake3"]
runtime = [
    "crypto",
    "dep:async-trait",
    "dep:tracing",
    "dep:zero-platform-tokio",
    "dep:zero-transport",
]

[dependencies]
async-trait = { version = "0.1", optional = true }
aes = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
blake3 = { version = "1", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true, default-features = false }
ring = { version = "0.17", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-platform-tokio = { path = "../../crates/platform/tokio", optional = true }
zero-transport = { path = "../../crates/transport", optional = true }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
ring = { version = "0.17" }
chacha20poly1305 = "0.10"
aes = "0.8"

[[test]]
name = "outbound"
required-features = ["runtime"]

[[test]]
name = "shared"
required-features = ["runtime"]
