[package]
name = "socks5"
version = "0.0.1"  # RFC 1928, no upstream reference
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
runtime = [
    "dep:async-trait",
    "dep:zero-platform-tokio",
    "dep:zero-transport",
]

[dependencies]
async-trait = { version = "0.1", optional = true }
zero-core = { path = "../../crates/core" }
zero-platform-tokio = { path = "../../crates/platform/tokio", optional = true }
zero-transport = { path = "../../crates/transport", optional = true }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
